--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,6 +1,8 @@
 .ui.huge.inverted.borderless.stackable.menu
     .ui.text.container
         a.header.item(href='/' class="{{isActivePath '/'}}") Gold Run
+        a.icon.item(href='/marketplace' class="{{isActivePath '/marketplace'}}")
+            i.shop.icon
         a.icon.item(href='/conversations' class="{{isActivePath '/conversations'}}")
             i.comments.outline.icon
         a.icon.item(href='/posts' class="{{isActivePath '/posts'}}") 
