--- a/client/templates.jade
+++ b/client/templates.jade
@@ -31,3 +31,8 @@ template(name='layout')
 
 template(name="tag_result")
     .ui.basic.label #{name}
+
+template(name='not_found')
+    .ui.text.container
+        .ui.center.aligned.header Not Found
+        // h5.ui.center.aligned.header Those responsible have been sacked.
