--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,27 +1,23 @@
-.ui.huge.inverted.borderless.stackable.menu
+.ui.inverted.stackable.menu
     .ui.text.container
         a.header.item(href='/' class="{{isActivePath '/'}}") Gold Run
-        a.icon.item(href='/marketplace' class="{{isActivePath '/marketplace'}}")
-            i.shop.icon
-        a.icon.item(href='/conversations' class="{{isActivePath '/conversations'}}")
-            i.comments.outline.icon
-        a.icon.item(href='/posts' class="{{isActivePath '/posts'}}") 
-            i.newspaper.icon
-        a.icon.item(href='/users' class="{{isActivePath '/users'}}") 
-            i.users.icon
-        a.icon.item(href='/events' class="{{isActivePath '/events'}}")
-            i.calendar.icon
+        a.item(href='/readings' class="{{isActivePath '/readings'}}")
+            i.edit.icon
+            | Readings
+        a.item(href='/lostfound' class="{{isActivePath '/lostfound'}}")
+            i.random.icon
+            |Lost and Found
     .right.menu
         if currentUser
-            a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
-                i.line.chart.icon
-            .ui.simple.dropdown.icon.item
-                i.alarm.icon
-                .menu
-                    each notifications
-                        .item #{text}
-            a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
-                i.mail.icon
+            // a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
+            //     i.line.chart.icon
+            // .ui.simple.dropdown.icon.item
+            //     i.alarm.icon
+            //     .menu
+            //         each notifications
+            //             .item #{text}
+            // a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
+            //     i.mail.icon
             if isInRole 'admin'
                 a.item(href='/admin/members' class="{{isActivePath '/admin/members'}}")
                     i.configure.icon
