--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -13,6 +13,9 @@
         a.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}")
             i.circle.info.icon
             |Desk Staff
+        a.item(href='/keys' class="{{isActivePath '/keys'}}")
+            i.key.icon
+            |Keys
     .right.menu
         if currentUser
             // a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
