--- a/components/bikes/bikes.jade
+++ b/components/bikes/bikes.jade
@@ -2,7 +2,8 @@ template(name='bikes')
     .ui.container
         .ui.center.aligned.header Impounded Bikes
             i#add_impounded_bike.green.plus.link.icon 
-        .ui.centerd.cards
+        +cloud filter='bike'
+        .ui.centered.cards
             each bikes
                 +bike
             
