--- a/components/lost_and_found/lostfound.jade
+++ b/components/lost_and_found/lostfound.jade
@@ -2,7 +2,8 @@ template(name='lostfound')
     .ui.container
         .ui.center.aligned.header Health Club Lost and Found
             i#add_lf_reading.green.plus.link.icon 
-        .ui.centerd.cards
+        +cloud filter='lostfound'
+        .ui.centered.cards
             each lostfound_items
                 +lostfound_item
             
