--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,21 +1,24 @@
 .ui.inverted.stackable.menu
-    .ui.text.container
-        a.header.item(href='/' class="{{isActivePath '/'}}") Gold Run
-        a.item(href='/readings' class="{{isActivePath '/readings'}}")
-            i.theme.icon
-            | Readings
-        a.item(href='/lostfound' class="{{isActivePath '/lostfound'}}")
-            i.random.icon
-            |Lost and Found
-        a.item(href='/bikes' class="{{isActivePath '/bikes'}}")
-            i.bicycle.icon
-            |Bikes
-        a.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}")
-            i.circle.info.icon
-            |Desk Staff
-        a.item(href='/keys' class="{{isActivePath '/keys'}}")
-            i.key.icon
-            |Keys
+    // a.header.item(href='/' class="{{isActivePath '/'}}") Gold Run
+    .header.item GR
+    a.item(href='/readings' class="{{isActivePath '/readings'}}")
+        i.theme.icon
+        | Readings
+    a.item(href='/lostfound' class="{{isActivePath '/lostfound'}}")
+        i.random.icon
+        |Lost and Found
+    a.item(href='/bikes' class="{{isActivePath '/bikes'}}")
+        i.bicycle.icon
+        |Bikes
+    a.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}")
+        i.circle.info.icon
+        |Desk Staff
+    a.item(href='/buildings' class="{{isActivePath '/buildings'}}")
+        i.building.icon
+        |Buildings
+    a.item(href='/keys' class="{{isActivePath '/keys'}}")
+        i.key.icon
+        |Keys
     .right.menu
         if currentUser
             // a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
@@ -30,7 +33,6 @@
             if isInRole 'admin'
                 a.item(href='/admin/members' class="{{isActivePath '/admin/members'}}")
                     i.configure.icon
-                    | Admin
             a.item(href="/account/profile/edit/#{currentUser._id}" class="{{isActivePath '/account/profile/edit/#{currentUser._id}'}}")
                 if currentUser.profile.image_id
                     img.ui.avatar.image(src="{{c.url currentUser.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
