--- a/components/front_desk/front_desk.jade
+++ b/components/front_desk/front_desk.jade
@@ -17,31 +17,47 @@ template(name='frontdesk')
 
 
 template(name='schedule')
-    .ui.center.aligned.dividing.header Schedule
-    table.ui.definition.table
-        thead
-            tr
-                th
-                th Sunday
-                th Monday
-                th Tuesday
-                th Wednesday
-                th Thursday
-                th Friday
-                th Saturday
-        tbody
-            tr
-                td Morning 7am-12pm
-                td 
-                td 
-            tr
-                td Afternoon 12pm-4pm
-                td 
-                td 
-            tr
-                td Evening 4pm-9pm
-                td 
-                td 
+    .ui.segment
+        .ui.center.aligned.header Schedule
+        table.ui.definition.celled.striped.selectable.table
+            thead
+                tr
+                    th
+                    th Sunday
+                    th Monday
+                    th Tuesday
+                    th Wednesday
+                    th Thursday
+                    th Friday
+                    th Saturday
+            tbody
+                tr
+                    td Morning 7am-12pm
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                tr
+                    td Afternoon 12pm-4pm
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                tr
+                    td Evening 4pm-9pm
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
+                    td 
 
 
 
