--- a/components/lost_found/lostfound.jade
+++ b/components/lost_found/lostfound.jade
@@ -18,7 +18,7 @@ template(name='lostfound_item')
                 |#{body}
             .meta
                 each tags
-                    .ui.tag.label #{this}
+                    .ui.basic.label #{this}
         .content
             | by #{author.username}
             | #{when}
