--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,6 +1,6 @@
-.ui.inverted.stackable.menu
+.ui.inverted.borderless.stackable.labeled.icon.menu
     // a.header.item(href='/' class="{{isActivePath '/'}}") Gold Run
-    .header.item GR
+    // .header.item GR
     a.item(href='/readings' class="{{isActivePath '/readings'}}")
         i.theme.icon
         | Readings
@@ -16,9 +16,15 @@
     a.item(href='/buildings' class="{{isActivePath '/buildings'}}")
         i.building.icon
         |Buildings
+    a.item(href='/tasks' class="{{isActivePath '/tasks'}}")
+        i.edit.icon
+        |Tasks
     a.item(href='/keys' class="{{isActivePath '/keys'}}")
         i.key.icon
         |Keys
+    a.item(href='/people' class="{{isActivePath '/people'}}")
+        i.users.icon
+        |People
     .right.menu
         if currentUser
             // a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
@@ -31,8 +37,9 @@
             // a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
             //     i.mail.icon
             if isInRole 'admin'
-                a.item(href='/admin/members' class="{{isActivePath '/admin/members'}}")
+                a.icon.item(href='/admin/members' class="{{isActivePath '/admin/members'}}")
                     i.configure.icon
+                    |Admin
             a.item(href="/account/profile/edit/#{currentUser._id}" class="{{isActivePath '/account/profile/edit/#{currentUser._id}'}}")
                 if currentUser.profile.image_id
                     img.ui.avatar.image(src="{{c.url currentUser.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
