--- a/components/readings/readings.jade
+++ b/components/readings/readings.jade
@@ -40,7 +40,7 @@ template(name='indoor_hot_tub_readings')
         i#add_indoor_hot_tub_reading.green.plus.link.icon
         // |Add Indoor Hot Tub Reading
 
-    table.ui.table
+    table.ui.sortable.striped.table
         thead
             tr
                 th pH
@@ -68,7 +68,7 @@ template(name='outdoor_hot_tub_readings')
         i#add_outdoor_hot_tub_reading.green.plus.link.icon
             // |Add Outdoor Hot Tub Reading
 
-    table.ui.table
+    table.ui.sortable.striped.table
         thead
             tr
                 th pH
@@ -96,7 +96,7 @@ template(name='pool_readings')
     .ui.header Pool Readings
         i#add_pool_reading.green.plus.link.icon 
         // |Add Pool Reading
-    table.ui.table
+    table.ui.sortable.striped.table
         thead
             tr
                 th pH
