--- a/client/templates.jade
+++ b/client/templates.jade
@@ -14,7 +14,9 @@ head
     // LayerSlider script files
     script(src='/layerslider/js/layerslider.transitions.js', type='text/javascript')
     script(src='/layerslider/js/layerslider.kreaturamedia.jquery.js', type='text/javascript')
-
+    // sorting
+    script(src='/tablesort.js', type='text/javascript')
+    
 
 
 
