--- a/components/bikes/bikes.jade
+++ b/components/bikes/bikes.jade
@@ -10,9 +10,25 @@ template(name='bikes')
 
 template(name='bike')
     .ui.card
-        if image_id
-            .image
-                img(src="{{c.url image_id}}")
+        .image
+            .ui.shape
+                .flip_shape.sides
+                    if image_id
+                        a.side.active
+                            .image
+                                img(src="{{c.url image_id width='290' height='310' crop='lpad'}}")
+                    if frame_image_id
+                        a.side
+                            .image
+                                img(src="{{c.url frame_image_id width='290' height='310' crop='lpad'}}")
+                    if seat_image_id
+                        a.side
+                            .image
+                                img(src="{{c.url seat_image_id width='290' height='310' crop='lpad'}}")
+                    if handlebar_image_id
+                        a.side
+                            .image
+                                img(src="{{c.url handlebar_image_id width='290' height='310' crop='lpad'}}")
         .content
             .description
                 |#{body}
@@ -32,7 +48,54 @@ template(name='edit_bike')
         .ui.text.container.segment
             .ui.center.aligned.header Edit Impounded Bike 
             .ui.form
-                +edit_image
+                if image_id
+                    .field
+                        label Original Image
+                        .ui.large.image
+                            img(src="{{c.url image_id height='400' crop='fit' }}")
+                            a#remove_photo.ui.top.left.attached.link.basic.label Remove
+                            .ui.bottom.right.attached.basic.label Image Id: #{image_id}
+                else
+                    .fields
+                        .field
+                            label Upload Handlebar Image
+                            input#upload_handlebar_image(type='file' name='upload_picture' accept='image/*')
+                if handlebar_image_id
+                    .field
+                        label Handlebar Image
+                        .ui.large.image
+                            img(src="{{c.url handlebar_image_id height='400' crop='fit' }}")
+                            a#remove_photo.ui.top.left.attached.link.basic.label Remove
+                            .ui.bottom.right.attached.basic.label Image Id: #{handlebar_image_id}
+                else
+                    .fields
+                        .field
+                            label Upload Handlebar Image
+                            input#upload_handlebar_image(type='file' name='upload_picture' accept='image/*')
+                if frame_image_id
+                    .field
+                        label Frame Image
+                        .ui.large.image
+                            img(src="{{c.url frame_image_id height='400' crop='fit' }}")
+                            a#remove_photo.ui.top.left.attached.link.basic.label Remove
+                            .ui.bottom.right.attached.basic.label Image Id: #{frame_image_id}
+                else
+                    .fields
+                        .field
+                            label Upload Frame Image
+                            input#upload_frame_image(type='file' name='upload_picture' accept='image/*')
+                if seat_image_id
+                    .field
+                        label Seat Image
+                        .ui.large.image
+                            img(src="{{c.url seat_image_id height='400' crop='fit' }}")
+                            a#remove_photo.ui.top.left.attached.link.basic.label Remove Seat Image
+                            .ui.bottom.right.attached.basic.label Image Id: #{seat_image_id}
+                else
+                    .fields
+                        .field
+                            label Upload Seat Image
+                            input#upload_seat_image(type='file' name='upload_picture' accept='image/*')
                 +edit_tags
                 +edit_body
                 a.ui.green.large.button(href='/bikes') Save Impounded Bike
