--- a/components/requests/requests.jade
+++ b/components/requests/requests.jade
@@ -1,10 +1,10 @@
 template(name='requests')
-    .ui.container
-        .ui.center.aligned.dividing.header Front Desk Time Off Requests
+    .ui.container.segment
+        .ui.center.aligned.header Front Desk Time Off Requests
             i#add_request.green.plus.link.icon 
         h4.ui.center.aligned.header
             | Approval will be given no later than 48 hrs of the first date requested.
-        table.ui.table
+        table.ui.sortable.striped.table
             thead
                 tr
                     th Employee
