--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,5 +1,7 @@
 .ui.inverted.borderless.stackable.labeled.icon.menu
-    // a.header.item(href='/' class="{{isActivePath '/'}}") Gold Run
+    a.header.item(href='/' class="{{isActivePath '/'}}") 
+        i.home.icon
+        |Gold Run
     // .header.item GR
     a.item(href='/readings' class="{{isActivePath '/readings'}}")
         i.theme.icon
