--- a/components/people/people.jade
+++ b/components/people/people.jade
@@ -61,7 +61,7 @@ template(name='people')
         h1.ui.center.aligned.header People
             i#add_person.green.plus.link.icon 
             // |Add Pool Reading
-        table.ui.striped.sortable.table
+        table.ui.striped.sortable.single.line.table
             thead
                 tr
                     th First Name
