--- a/client/fields/edit_image/client/edit_image.tpl.jade
+++ b/client/fields/edit_image/client/edit_image.tpl.jade
@@ -10,7 +10,7 @@ else
         .field
             label Upload Image
             input(type='file' name='upload_picture' accept='image/*')
-        if isInRole 'admin'
-            .field
-                label or Choose Cloudinary Image Id
-                input#input_image_id(type='text')
+        // if isInRole 'admin'
+        //     .field
+        //         label or Choose Cloudinary Image Id
+        //         input#input_image_id(type='text')
