--- a/components/keys/keys.jade
+++ b/components/keys/keys.jade
@@ -41,7 +41,7 @@ template(name='keys')
     .ui.container
         h1.ui.center.aligned.header Gold Run Keys
             i#add_key.green.plus.link.icon 
-        table.ui.sortable.striped.table
+        table.ui.sortable.striped.unstackable.table
             thead
                 tr
                     th Key Exists
