--- a/components/tasks/tasks.jade
+++ b/components/tasks/tasks.jade
@@ -20,7 +20,7 @@ template(name='tasks')
     .ui.container
         h1.ui.center.aligned.header Tasks
             i#add_task.green.plus.link.icon 
-        table.ui.table
+        table.ui.unstackable.striped.table
             thead
                 tr
                     th Photo
