before after pics, progress on doc structure movement

--- a/client/fields/fields.jade
+++ b/client/fields/fields.jade
@@ -32,10 +32,10 @@ template(name='complete')
         #mark_complete.ui.button(class=complete_class) Yes 
         #mark_incomplete.ui.button(class=incomplete_class) No 
 
-template(name='assigned_to')            
+template(name='staff')            
     .field
-        label Assigned To
-        input#assigned_to(type='text' value=assigned_to)        
+        label Staff
+        input#staff(type='text' value=staff)        
 
 template(name='notes')            
     .field
