--- a/components/tasks/tasks.jade
+++ b/components/tasks/tasks.jade
@@ -4,12 +4,24 @@ template(name='edit_task')
         .ui.text.container
             h1.ui.center.aligned.header Edit Task
             .ui.form
-                +edit_image
-                +building_code
-                +assigned_to
+                +before_image
+                .field
+                    label Location
+                    input#location(type='text' value=location)
+                +staff
                 +due_date
-                +complete
-                +notes
+                .ui.segment
+                    +complete
+                    if complete
+                        .field
+                            label Complete Date
+                            input#complete_date(type='date' value=complete_date)        
+                        +after_image
+                        +notes
+                .field
+                    label Description
+                    input#description(type='text' value=description)
+
                 .ui.basic.center.aligned.segment
                     a.ui.green.big.button(href='/tasks') Save Task
                     #delete_task.ui.red.icon.button
@@ -20,35 +32,47 @@ template(name='tasks')
     .ui.container
         h1.ui.center.aligned.header Tasks
             i#add_task.green.plus.link.icon 
-        table.ui.unstackable.striped.table
-            thead
-                tr
-                    th Photo
-                    th Completed
-                    th Building
-                    th Assigned To
-                    th Due Date
-                    th Notes
-                    th Created
-                    th Actions
-            tbody
-                each tasks
-                    tr
-                        td 
-                            img.ui.small.image(src="{{c.url image_id }}")
-                        td 
-                            if complete
-                                i.green.large.check.icon
-                            else
-                                i.remove.icon
-                        td #{building_code}
-                        td #{assigned_to}
-                        td #{due_date}
-                        td #{notes}
-                        td #{author.username} #{when}
-                        td 
-                            a.ui.compact.button(href="/task/edit/#{_id}")
-                                i.pencil.icon
-                                | Edit
-
-
+        .ui.centered.cards
+            each tasks
+                +task_card
+                    
+                
+template(name='task_card')
+    .ui.card
+        if before_image_id
+            .image
+                .ui.header Before
+                img.ui.small.image(src="{{c.url before_image_id width='400' crop='scale' }}")
+        if after_image_id
+            .image
+                .ui.header After
+                img.ui.small.image(src="{{c.url after_image_id width='400' crop='scale' }}")
+        .content
+            if complete
+                span.right.floated
+                    i.green.large.check.icon
+            else
+                i.right.floated.remove.large.icon
+            .header #{description}
+            .meta
+                i.location.arrow.icon
+                |#{location}
+            if due_date
+                span
+                    i.calendar.icon
+                    |#{due_date}
+        if complete
+            .content
+                |Completed by #{staff}
+                if complete_date
+                    |on #{complete_date}
+                if notes
+                    div
+                        i.edit.icon
+                        |#{notes}
+        .content
+            a.ui.basic.button(href="/task/edit/#{_id}") 
+                i.pencil.icon
+                |Edit
+            // a.ui.compact.button(href="/task/view/#{_id}") 
+            //     |View
